#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( plastik )
add_subdirectory( highcolor )
add_subdirectory( highcontrast )
add_subdirectory( themes )
add_subdirectory( light )
add_subdirectory( kthemestyle )
add_subdirectory( riscos )
add_subdirectory( utils )
add_subdirectory( keramik )
